--- a/main.html
+++ b/main.html
@@ -5,8 +5,24 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <meta name="description" content="내용"/>
+    <meta name="keyword" content="웹사이트,클래스101"/>
+    <style>
+        .layout{
+            background-color: blueviolet;
+            width: 200px;
+            height: 200px;
+        }
+    </style>
+    <script src="main.js"></script>
 </head>
 <body>
+    <div class="layout layout1" id="layout_id_1">
+        <div class="layout layout2" id="layout_id_2">
+
+        </div>
+    </div>
+
     
 </body>
 </html>
